--- a/GhasreMobile/Views/ShopCart/Payment.cshtml
+++ b/GhasreMobile/Views/ShopCart/Payment.cshtml
@@ -1,17 +1,14 @@
 ﻿
 @{
     ViewData["Title"] = "نتیجه پرداخت";
+    ViewData["Single"] = true;
 }
+<div class="container uk-margin-auto-bottom mat-pad" style="height:50vh">
+    <div class="">
 
-<nav aria-label="breadcrumb">
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">قصر موبایل </a></li>
-        <li class="breadcrumb-item active" aria-current="page">نتیجه پرداخت</li>
-    </ul>
-</nav>
+            <div class="uk-alert uk-alert-success">
+                <h2>پرداخت با  کیف پول شما با موفقیت انجام شد</h2>
+            </div>
 
-<div class="container">
-    <div class="alert alert-success">
-        <h2>پرداخت با  کیف پول شما با موفقیت انجام شد</h2>
     </div>
 </div>
