--- a/GhasreMobile/Views/ShopCart/OnlinePayment.cshtml
+++ b/GhasreMobile/Views/ShopCart/OnlinePayment.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container uk-margin-auto-bottom mat-pad" style="height:50vh">
     <div class="">
-        @if (ViewBag.IsSuccess == true)
+        @*@if (ViewBag.IsSuccess == true)
         {
             <div class="uk-alert uk-alert-success">
                 <h2>پرداخت با موفقیت انجام شد</h2>
@@ -18,6 +18,8 @@
             <div class="uk-alert uk-alert-danger">
                 <h2>پرداخت با شکست مواجه شد</h2>
             </div>
-        }
+        }*@
+
+        @Html.Raw(ViewBag.message)
     </div>
 </div>
