--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -109,7 +109,7 @@
                                         @item.Keyword.Name@:,
                                         }
 
-                                       " data-role="tagsinput" id="tags" class="form-control">
+                                       " data-role="tagsinput" id="tags" class="form-control" placeholder="کلمات کلیدی">
                     </div>
                     <span class="text-danger" asp-validation-for="TblProductKeywordRel"></span>
                 </div>
@@ -216,11 +216,11 @@
         function SetNewInputGallery() {
             $("#GalleryPanel").append(
                 `<div class="custom-file col-md-7 mt-3">
-                                                               <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
-                                                               <label class="custom-file-label" data-browse="انتخاب">
-                                                                    انتخاب فایل
-                                                               </label>
-                                                             </div>`
+                                                                       <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                                                                       <label class="custom-file-label" data-browse="انتخاب">
+                                                                            انتخاب فایل
+                                                                       </label>
+                                                                     </div>`
             );
 
             //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
