--- a/GhasreMobile/Areas/User/Views/Wallet/Charg.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Charg.cshtml
@@ -29,21 +29,19 @@
 
 @*این تابع یک فرم می سازد و اطلاعات را به شیوه پست ارسال می کند*@
 <script language="javascript" type="text/javascript">
-    function postRefId(refIdValue) {
-        console.log(refIdValue);
-        alert(refIdValue);
-        var form = document.createElement("form");
-        form.setAttribute("method", "POST");
-        form.setAttribute("action", "https://bpm.shaparak.ir/pgwchannel/startpay.mellat");
-        form.setAttribute("target", "_self");
-        var hiddenField = document.createElement("input");
-        hiddenField.setAttribute("name", "RefId");
-        hiddenField.setAttribute("value", refIdValue);
-        form.appendChild(hiddenField);
-        document.getElementById("bankform").appendChild(form);
-        form.submit();
-        document.getElementById("bankform").removeChild(form);
-    }
+    //function postRefId(refIdValue) {
+    //    var form = document.createElement("form");
+    //    form.setAttribute("method", "POST");
+    //    form.setAttribute("action", "https://bpm.shaparak.ir/pgwchannel/startpay.mellat");
+    //    form.setAttribute("target", "_self");
+    //    var hiddenField = document.createElement("input");
+    //    hiddenField.setAttribute("name", "RefId");
+    //    hiddenField.setAttribute("value", refIdValue);
+    //    form.appendChild(hiddenField);
+    //    document.getElementById("bankform").appendChild(form);
+    //    form.submit();
+    //    document.getElementById("bankform").removeChild(form);
+    //}
     function runerror() {
         alert("خطا در ارسال به درگاه");
     }
