--- a/GhasreMobile/Areas/Admin/Views/Album/Components/Show.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Album/Components/Show.cshtml
@@ -11,7 +11,7 @@
     <div class="flex row col-12 my-3">
         @foreach (var item in Model.TblImage)
         {
-            <div class="col-6 col-lg-3 col-md-4 mb-3">
+            <div class="col-6 col-lg-3 col-md-4 mb-3" id="AlbumImageId-@item.ImageId">
                 <button onclick="DeleteImage(@item.ImageId)" class="bg-light dismissButton" uk-icon="close-outline"></button>
                 <a class="d-inline" href="~/Images/ProductAlbum/@item.Image" target="_blank">
                     <img class="d-inline" src="/Images/ProductAlbum/@item.Image" width="250" height="250" alt="">
@@ -28,7 +28,7 @@
 <script>
     function DeleteImage(id) {
         $.post("/Admin/Album/DeleteImage/" + id, function () {
-            window.location.reload();
+            $("#AlbumImageId-" + id).remove();
         });
     }
 </script>
