--- a/GhasreMobile/Views/Shared/Components/SendCommentView/SendCommentView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SendCommentView/SendCommentView.cshtml
@@ -16,12 +16,12 @@
         <div class="rowr uk-margin-small-top">
             @if (User.Identity.IsAuthenticated)
             {
-                <button type="submit" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendComment')">ثبت نظر</button>
+                <button type="submit" class="btn btn-primary uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendComment')">ثبت نظر</button>
 
             }
             else
             {
-                <a href="/Login" class="btn btn-dashed uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendComment')">ثبت نظر</a>
+                <a href="/Login" class="btn btn-primary uk-margin-auto-top" onclick="LoadingRun('#ajaxresultSendComment')">ثبت نظر</a>
             }
             <div class="row star-container uk-margin-auto-right">
                 <span class="star-cb-group" id="myRaiting">
