--- a/GhasreMobile/Views/Home/Contact.cshtml
+++ b/GhasreMobile/Views/Home/Contact.cshtml
@@ -16,28 +16,28 @@
 
     <div class="left">
         <!-- #region Contact -->
-        @*<form class="request mat-card">
-                <h3 class="uk-margin-bottom">تماس با ما</h3>
-                <div class="fg-col">
-                    <label for="TelNo" class="fg-label">شماره تلفن</label>
-                    <input id="TelNo" name="TelNo" type="tel" class="entry" value="" />
-                    <span class="text-danger"></span>
-                </div>
-                <div class="fg-col">
-                    <label for="Name" class="fg-label">نام و نام خانوادگی</label>
-                    <input id="Name" name="Name" type="text" class="entry" value="" />
-                    <span class="text-danger"></span>
-                </div>
-                <div class="fg-col">
-                    <label for="Message" class="fg-label">پیغام شما</label>
-                    <textarea id="Message" name="Message" class="entry"></textarea>
-                    <span class="text-danger"></span>
-                </div>
-                <div class="rowr">
-                    <button class="btn btn-primary">ارسال پیام</button>
-                </div>
-            </form>*@
-
+        <form class="request mat-card">
+            <h3 class="uk-margin-bottom">تماس با ما</h3>
+            <p class="text-3">در صورت داشتن هر گونه پیشنهاد، سوال و یا راهنمایی، با ما در تماس باشید</p>
+            <div class="fg-col">
+                <label for="TelNo" class="fg-label">شماره تلفن</label>
+                <input id="TelNo" name="TelNo" type="tel" class="entry" value="" />
+                <span class="text-danger"></span>
+            </div>
+            <div class="fg-col">
+                <label for="Name" class="fg-label">نام و نام خانوادگی</label>
+                <input id="Name" name="Name" type="text" class="entry" value="" />
+                <span class="text-danger"></span>
+            </div>
+            <div class="fg-col">
+                <label for="Message" class="fg-label">پیغام شما</label>
+                <textarea id="Message" name="Message" class="entry"></textarea>
+                <span class="text-danger"></span>
+            </div>
+            <div class="rowr">
+                <button class="btn btn-primary">ارسال پیام</button>
+            </div>
+        </form>
         <!-- #endregion -->
         <!-- #region Sellers -->
 
