--- a/GhasreMobile/wwwroot/css/pages/product.css
+++ b/GhasreMobile/wwwroot/css/pages/product.css
@@ -70,9 +70,9 @@ backdrop-filter: saturate(80%);
 /*#endregion */
 .pr {
   display: grid;
-  grid-template-columns: 180px 2fr 1.1fr;
+  grid-template-columns: 150px 2fr 1.1fr;
   grid-template-rows: 92px auto;
-  grid-template-areas: "title title image" "specs content image";
+  grid-template-areas: 'title title image' 'specs content image';
   grid-gap: 10px;
   z-index: 10;
   -moz-border-radius: 4px 4px 0 0;
@@ -168,7 +168,8 @@ backdrop-filter: saturate(80%);
         border-radius: 4px 4px 4px 4px; }
   .pr-title {
     background-color: #F5F6F7;
-    grid-area: title; }
+    grid-area: title;
+    border: #e9e9e9 1px solid; }
     @media only screen and (min-device-width: 420px) {
       .pr-title {
         padding: 12px; } }
@@ -179,6 +180,8 @@ backdrop-filter: saturate(80%);
     grid-area: content;
     min-height: 150px;
     grid-gap: 8px; }
+    .pr-content .body p {
+      margin: 4px 0; }
     .pr-content .colours {
       display: flex;
       flex-direction: column; }
@@ -231,10 +234,23 @@ backdrop-filter: saturate(80%);
           margin-bottom: 5px;
           margin-right: 4px; }
   .pr-specs {
-    background-color: transparent;
     grid-area: specs;
+    width: 150px;
+    margin: 0;
+    margin-bottom: auto;
+    background-color: #F5F6F7;
+    color: #666;
     min-height: 50px;
-    width: 180px; }
+    border: #e9e9e9 1px solid;
+    padding: 12px;
+    direction: rtl;
+    list-style: disc !important;
+    padding-right: 30px; }
+    .pr-specs li {
+      direction: rtl;
+      min-height: 32px;
+      vertical-align: middle;
+      list-style: disc !important; }
 
 @media only screen and (max-width: 824px) {
   .pr {
