--- a/GhasreMobile/Views/Search/Index.cshtml
+++ b/GhasreMobile/Views/Search/Index.cshtml
@@ -177,7 +177,7 @@
             $(".loading").fadeIn();
             //let data = $(this).serializeArray();
             var name = $('#name').val();
-            var q = $('#q').val();
+            var q = "";
             var pageId = $('#pageId').val();
             var brand = $('#brand option:selected').text();
             var minPrice = $('#minPrice').val();
@@ -284,6 +284,7 @@
             $(".loading").fadeIn();
             var name = $('#name').val();
             var q = $('#q').val();
+            alert(q);
             var pageId = $('#pageId').val();
             var brand = $('#brand option:selected').text();
             var minPrice = $('#minPrice').val();
