--- a/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
@@ -1,28 +1,29 @@
 ﻿@model IEnumerable<TblBlog>
 @if (Model.Any())
 {
-    <div class="mat-card uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
+<div class="mat-card uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
 
-        <div class="title gap-b">
-            <a href="#" class="dot-container">
-                <img src="~/st/v/dot.svg" alt="" class="dot" />
-                <h3>اخبار</h3>
-            </a>
-        </div>
-
-        <ul class="uk-slider-items uk-child-width-1-1-at-xs uk-child-width-1-2-at-s uk-child-width-1-2-at-m uk-child-width-1-2-at-l uk-child-width-1-2-at-xl uk-grid">
-
-            @foreach (var item in Model)
-            {
-                <li>
-                    <partial name="_BlogBlock" model="item" />
-                </li>
-            }
-
-        </ul>
-
-        <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin uk-margin-top"></ul>
-
+    <div class="title gap-b">
+        <a href="#" class="dot-container">
+            <img src="~/st/v/dot.svg" alt="" class="dot" />
+            <h3>اخبار</h3>
+        </a>
     </div>
+
+    <ul class="uk-slider-items uk-child-width-1-1-at-xs uk-child-width-1-2-at-s uk-child-width-1-2-at-m uk-child-width-1-2-at-l uk-child-width-1-2-at-xl uk-grid">
+
+        @foreach (var item in Model)
+        {
+            <li>
+                <partial name="_BlogBlock" model="item" />
+            </li>
+        }
+    </ul>
+
+    <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin uk-margin-top"></ul>
+    <div class="row uk-margin-top">
+        <a class="btn btn-secondary uk-margin-auto" href="/Blog">بیشتر</a>
+    </div>
+</div>
 
 }
