--- a/GhasreMobile/Views/Blog/ViewBlog.cshtml
+++ b/GhasreMobile/Views/Blog/ViewBlog.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = Model.Title;
     Layout = "~/Views/Shared/_Layout.cshtml";
     List<int> idsAdd = (List<int>)ViewData["ListIdAd"];
+    List<int> idsBlog = (List<int>)ViewData["ListIdBlog"];
     Random random = new Random();
 
     int getNext()
@@ -12,6 +13,17 @@
             int randomIndex = random.Next(0, idsAdd.Count - 1);
             int id = idsAdd[randomIndex];
             idsAdd.Remove(id);
+            return id;
+        }
+        return -1;
+    }
+    int getNextBlog()
+    {
+        if (idsBlog.Count > 0)
+        {
+            int randomIndex = random.Next(0, idsBlog.Count - 1);
+            int id = idsBlog[randomIndex];
+            idsBlog.Remove(id);
             return id;
         }
         return -1;
@@ -26,8 +38,12 @@
 
 @section Aside{
 
+    @await Component.InvokeAsync("BlogSingleView", new { number = getNextBlog() })
+
     @await Component.InvokeAsync("AdView", new { number = getNext() })
     @await Component.InvokeAsync("AdView", new { number = getNext() })
+
+    @await Component.InvokeAsync("BlogSingleView", new { number = getNextBlog() })
 
 }
 
