--- a/GhasreMobile/Views/Brand/Index.cshtml
+++ b/GhasreMobile/Views/Brand/Index.cshtml
@@ -22,7 +22,7 @@
                     string namepage = "همه محصولات";
                 }
                 <a href="/ShowBrand/0/@namepage.Replace(" ","-")">محصولات قصر موبایل</a>
-                <a href="#">برند</a>
+                <a href="/ShowBrand/0/@namepage.Replace(" ","-")">برند</a>
                 <a href="#">@ViewData["name"]</a>
             </nav>
 
