--- a/GhasreMobile/Views/Catagory/Index.cshtml
+++ b/GhasreMobile/Views/Catagory/Index.cshtml
@@ -22,7 +22,7 @@
                     string namepage = "همه محصولات";
                 }
                 <a href="/ShowCatagory/0/@namepage.Replace(" ","-")">محصولات قصر موبایل</a>
-                <a href="#">دسته</a>
+                <a href="/ShowCatagory/0/@namepage.Replace(" ","-")">دسته</a>
                 <a href="#">@ViewData["name"]</a>
             </nav>
 
