--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -294,6 +294,14 @@
                                         </a>
                                     </li>
                                     <li class="nav-item active">
+                                        <a href="/Admin/ContactUs" class="LoadingDiv">
+                                            <span class="icon-holder">
+                                                <i uk-icon="call"></i>
+                                            </span>
+                                            <span class="title">تماس با ما</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item active">
                                         <a href="/Admin/Topic" class="LoadingDiv">
                                             <span class="icon-holder">
                                                 <i uk-icon="clipboard"></i>
@@ -466,6 +474,14 @@
                                                 <i uk-icon="headset-outline"></i>
                                             </span>
                                             <span class="title">مرکز پاسخگویی</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item active">
+                                        <a href="/Admin/ContactUs" class="LoadingDiv">
+                                            <span class="icon-holder">
+                                                <i uk-icon="call"></i>
+                                            </span>
+                                            <span class="title">تماس با ما</span>
                                         </a>
                                     </li>
                                     <li class="nav-item active">
