--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -226,6 +226,18 @@ backdrop-filter: saturate(80%);
     .main-contact .telegram img, .main-contact .instagram img {
       width: 100%;
       height: auto; }
+  .main-contact .bottom {
+    border: 3px #e9e9e9 dashed;
+    -moz-border-radius: 6px 6px 6px 6px;
+    -webkit-border-radius: 6px 6px 6px 6px;
+    border-radius: 6px 6px 6px 6px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-start: span 2; }
+    .main-contact .bottom a {
+      display: flex; }
+      .main-contact .bottom a img {
+        margin: auto; }
 
 @media only screen and (max-width: 724px) {
   .main-contact {
