--- a/GhasreMobile/wwwroot/css/pages/affiliate.scss
+++ b/GhasreMobile/wwwroot/css/pages/affiliate.scss
@@ -11,9 +11,9 @@
         li {
             a {
                 display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr;
-                grid-template-areas: "tel h" "label label";
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr 1fr;
+                grid-template-areas: "h" "label" "tel ";
                 grid-row-gap: 8px;
                 padding: 8px 12px;
                 cursor: pointer;
@@ -38,6 +38,7 @@
 
                     span {
                         margin: auto;
+                        margin-right: 0;
                         color: $Text;
                         font-size: 16px;
                         margin-left: 6px;
