--- a/GhasreMobile/Views/Affiliate/StoreView.cshtml
+++ b/GhasreMobile/Views/Affiliate/StoreView.cshtml
@@ -40,6 +40,41 @@
     </div>
 </div>
 
+<div class="card">
+    <h3>
+        تصاویر
+    </h3>
+    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+
+        <ul class="uk-slider-items uk-child-width-1-3 uk-child-width-1-3@s uk-child-width-1-4@m">
+            <li>
+                <img src="~/st/r/phones/p1.jpg" alt="">
+                <div class="uk-position-center uk-panel"></div>
+            </li>
+            <li>
+                <img src="~/st/r/phones/p2.jpg" alt="">
+                <div class="uk-position-center uk-panel"></div>
+            </li>
+            <li>
+                <img src="~/st/r/phones/p3.jpg" alt="">
+                <div class="uk-position-center uk-panel"></div>
+            </li>
+            <li>
+                <img src="~/st/r/phones/p4.jpg" alt="">
+                <div class="uk-position-center uk-panel"></div>
+            </li>
+            <li>
+                <img src="~/st/r/phones/p5.jpg" alt="">
+                <div class="uk-position-center uk-panel"></div>
+            </li>
+
+        </ul>
+
+        <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+    </div>
+
+</div>
+
 <div id="map" class="uk-box-shadow-medium">
 
 </div>
@@ -52,8 +87,6 @@
 <input type="hidden" id="lon" value="@Model.Lon" />
 <input type="hidden" id="Name" value="@Model.Name" />
 <input type="hidden" id="Address" value="@Model.Address" />
-
-
 
 @section Scripts{
 
