--- a/GhasreMobile/wwwroot/css/pages/product.scss
+++ b/GhasreMobile/wwwroot/css/pages/product.scss
@@ -172,12 +172,12 @@
         }
 
         .price {
-            @include column;
 
             .discount {
                 color: $danger;
                 text-decoration: line-through;
-                font-size: 20px;
+                font-size: 24px;
+                @include row-reverse;
             }
 
             .actual {
@@ -320,6 +320,7 @@
                 .button {
                     width: 100%;
                     white-space: nowrap;
+                    
                 }
             }
         }
@@ -386,7 +387,7 @@
     .button {
         background-color: #96027E;
         padding: 6px 8px;
-        @include border-radius(6px,6px,6px,6px);
+        @include border-radius(6px,0,0,6px);
         @include trans(.2s);
     }
 
