--- a/GhasreMobile/Views/Affiliate/StoreView.cshtml
+++ b/GhasreMobile/Views/Affiliate/StoreView.cshtml
@@ -47,6 +47,10 @@
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
         <ul class="uk-slider-items uk-child-width-1-3 uk-child-width-1-3@s uk-child-width-1-4@m">
+            @*@foreach (var item in Model)
+            {
+
+            }*@
             <li>
                 <img src="~/st/r/phones/p1.jpg" alt="">
                 <div class="uk-position-center uk-panel"></div>
@@ -79,7 +83,7 @@
 
 </div>
 
-<img src="~/Images/Store/@Model.MainImage" width="800" height="360" class="mat uk-width-1-1" alt="عکس شعبه" />
+@*<img src="~/Images/Store/@Model.MainImage" width="800" height="360" class="mat uk-width-1-1" alt="عکس شعبه" />*@
 
 <div role="none" id="swAffiliates"></div>
 
