--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -80,8 +80,8 @@
                         <span asp-validation-for="PriceBeforeDiscount" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
-                        <label>درصد تخفیف</label>
-                        <input asp-for="PriceAfterDiscount" class="form-control form-control-sm" placeholder="مثال : 10">
+                        <label>قیمت بعد از تخفیف</label>
+                        <input asp-for="PriceAfterDiscount" class="form-control form-control-sm" placeholder="مثال : 1,000,000">
                         <span asp-validation-for="PriceAfterDiscount" class="text-danger"></span>
                     </div>
                 </div>
@@ -169,6 +169,7 @@
             </div>
             <div class="card-footer bg-white">
                 <span class="text-danger" id="SubmitErorr"></span>
+                <a href="/Admin/Product" class="btn btn-primary btn-sm text-white pull-right ml-4 LoadingDiv">انصراف</a>
                 <button id="SubmitCreateProduct" type="submit" class="btn btn-success btn-sm text-white pull-right ml-4">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
             </div>
         </form>
@@ -216,11 +217,11 @@
         function SetNewInputGallery() {
             $("#GalleryPanel").append(
                 `<div class="custom-file col-md-7 mt-3">
-                                                                       <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
-                                                                       <label class="custom-file-label" data-browse="انتخاب">
-                                                                            انتخاب فایل
-                                                                       </label>
-                                                                     </div>`
+                                                                           <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                                                                           <label class="custom-file-label" data-browse="انتخاب">
+                                                                                انتخاب فایل
+                                                                           </label>
+                                                                         </div>`
             );
 
             //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
