--- a/GhasreMobile/Areas/Admin/Views/ContactUs/Components/ContactUsInfo.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/ContactUs/Components/ContactUsInfo.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblContactUs
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         جزئیات
     </h6>
@@ -11,17 +12,17 @@
         <div class="form-row ">
             <div class="form-group col-md-4">
                 <label>نام کاربر: </label>
-                <span>رضا رضایی</span>
+                <span>@Model.Name</span>
             </div>
             <div class="form-group col-md-4">
                 <label>شماره تماس: </label>
-                <span>0956541</span>
+                <span>@Model.TellNo</span>
             </div>
 
             <div class="form-group col-12">
                 <label>متن:</label>
                 <div class="bg-light p-3 uk-border-rounded">
-                    اگر شما یک طراح هستین و یا با طراحی های گرافیکی سروکار دارید به متن های برخورده اید که با نام لورم ایپسوم شناخته می‌شوند. لورم ایپسوم یا طرح‌نما (به انگلیسی: Lorem ipsum) متنی ساختگی و بدون معنی است که برای امتحان فونت و یا پر کردن فضا در یک طراحی گرافیکی و یا صنعت چاپ استفاده میشود. طراحان وب و گرافیک از این متن برای پرکردن صفحه و ارائه شکل کلی طرح استفاده می‌کنند.
+                    @Model.Message
                 </div>
             </div>
         </div>
