--- a/GhasreMobile/Areas/Admin/Views/ContactUs/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/ContactUs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblContactUs>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -18,17 +18,27 @@
                             </tr>
                         </thead>
                         <tbody>
-                            
+                            @if (Model.Count() == 0)
+                            {
                                 <tr>
-                                    <td>رضا رضایی</td>
-                                    <td>0956541</td>
-                                    <td>
-                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
-                                            <a data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
-                                        </span>
-                                    </td>
+                                    <td>پیغامی وجود ندارد</td>
                                 </tr>
-                            
+                            }
+                            else
+                            {
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@item.Name</td>
+                                        <td>@item.TellNo</td>
+                                        <td>
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
+                                                <a onclick="Info(@item.ContactUsId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                            </span>
+                                        </td>
+                                    </tr>
+                                }
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -36,9 +46,19 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                  @*  @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
     </div>
 </div>
+
+@section Script{
+    <script>
+        function Info(id) {
+            $.get("/Admin/ContactUs/Info/" + id, function (result) {
+                $(".modal-content").html();
+            });
+        }
+    </script>
+}
