admin: photos in store and links in config

--- a/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
@@ -74,7 +74,7 @@
                         <br /><span class="text-danger" asp-validation-for="FinalTextKharid"></span>
                     </div>
                     <div class="form-group col-lg-12 mt-lg-3">
-                        <label>لینک اینیستا:</label>
+                        <label>لینک اینستاگرام:</label>
                         <textarea asp-for="LinkInsta" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
                         <br /><span class="text-danger" asp-validation-for="LinkInsta"></span>
                     </div>
@@ -82,6 +82,16 @@
                         <label>لینک تلگرم:</label>
                         <textarea asp-for="LinkTelegram" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
                         <br /><span class="text-danger" asp-validation-for="LinkTelegram"></span>
+                    </div>
+                    <div class="form-group col-lg-12 mt-lg-3">
+                        <label>شماره واتساپ: </label>
+                        <textarea  class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
+                        <br /><span class="text-danger" ></span>
+                    </div>
+                    <div class="form-group col-lg-12 mt-lg-3">
+                        <label>ایمیل: </label>
+                        <textarea  class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
+                        <br /><span class="text-danger"></span>
                     </div>
                     <div class="form-group col-lg-12 mt-lg-3">
                         <label>توضیحات خرید اقساطی در صفحه ی فاکتور:</label>
