--- a/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
@@ -26,17 +26,6 @@
                 <span class="text-danger" asp-validation-for="TellNo"></span>
             </div>
         </div>
-        <label class="mt-2">تصویر اصلی</label>
-        <br />
-        <div class="custom-file col-md-7">
-            <input required asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
-            <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
-        </div>
-        <br />
-        <span class="text-success">لطفا اندازه تصویر انتخابی 360*800 باشد</span>
-        <br />
-        <span class="text-danger" asp-validation-for="MainImage"></span>
-        <hr />
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>توضیحات</label>
@@ -44,6 +33,16 @@
             </div>
             <span class="text-danger" asp-validation-for="Body"></span>
         </div>
+        <hr />
+        <label class="mt-3 uk-text-bold">افزودن عکس </label>
+        &nbsp;<span onclick="SetNewInputGallery()" class="text-success" uk-icon="add-circle-outline"></span>
+        &nbsp;<span onclick="RemoveInputGallery()" class="text-danger" uk-icon="remove-circle-outline"></span>
+
+        <div id="GalleryPanel"></div>
+        <br />
+        <span class="text-success">لطفا اندازه تصویر انتخابی 360*800 باشد</span>
+        <br />
+        <span class="text-danger" asp-validation-for="MainImage"></span>
         <hr />
         <div class="form-row">
             <div class="form-group col-md-7">
@@ -66,10 +65,27 @@
 <script src="~/Validate/jquery.validate.min.js"></script>
 <script src="~/Validate/jquery.validate.unobtrusive.js"></script>
 
+
 <script>
+    function SetNewInputGallery() {
+        //$("#GalleryPanel").append("<div class='custom-file col-md-7 mt-3'><input type='file' class='custom-file-input form-control form-control-sm' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/><label class='custom-file-label'></label></div>");
+        $("#GalleryPanel").append(
+            `<div class="custom-file col-md-7 mt-3">
+                                                   <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                                                   <label class="custom-file-label" data-browse="انتخاب">
+                                                        انتخاب فایل
+                                                   </label>
+                                                 </div>`
+        );
+        //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
+    }
     function inputChanged(sender) {
         var fileName = sender.files[0].name;
         sender.parentElement.querySelector('.custom-file-label').innerHTML = fileName;
+    }
+
+    function RemoveInputGallery() {
+        $("#GalleryPanel div").last().remove();
     }
 </script>
 <script>
